@@ -1,3 +1,5 @@
+    - Ticket #245 - created doc directory
+    - Ticket #185 - let run-psgi-request accept Hash
     - Ticket #251 - created a CONTRIBUTING.md for github
     - Ticket #222 - update documentation on render
     - Ticket #242 - update documentation on static-dir including bug at capture group in B::Route::StaticFile
